# exercise

./: .gitignore  README.md
cpp-tests/: CMakeLists.txt
cpp-tests/call_once/: CMakeLists.txt  call_once_test.cpp
cpp-tests/lambda/: CMakeLists.txt  lambda_test.cpp  main.cpp
cpp-tests/new/: CMakeLists.txt  new_test.cpp
cpp-tests/object/: CMakeLists.txt  object_test.cpp
cpp-tests/operator_overload/: CMakeLists.txt  Fraction.cpp  main.cpp  operator_overload_test.cpp
cpp-tests/operator_test/: Fraction.h  main.cpp  operator_test.vcxproj
cpp-tests/smartptr/: CMakeLists.txt  smartptr_test.cpp
cpp-tests/thread/: CMakeLists.txt  thread_test.cpp
cpp-tests/thread_join/: CMakeLists.txt  thread_join_test.cpp
cpp-tests/virtual_table/: CMakeLists.txt  main.cpp  virtual_table_test.cpp
cpp-tests/vptrtest/: main.cpp  vptrtest.vcxproj
opengl-tests/: .gitignore  CMakeLists.txt  opengl-tutorials-test.sln
opengl-tests/libs/: glew32d.lib  glfw3.lib
opengl-tests/test01/: test01.cpp  test01.vcxproj  test01.vcxproj.filters
opengl-tests/test02/: test02.cpp  test02.vcxproj  test02.vcxproj.filters
opengl-tests/test03/: test03.cpp  test03.vcxproj  test03.vcxproj.filters
opengl-tests/test04/: test04.cpp  test04.vcxproj  test04.vcxproj.filters
opengl-tests/test05/: test05.cpp  test05.vcxproj  test05.vcxproj.filters
opengl-tests/test06/: main.cpp  test06.vcxproj
pgae/: pgae.sdf  pgae.sln
pgae/section6/: Enumerator.h  GraphEdge.h  GraphNode.h  SparseGraph.h  main.cpp  section6.vcxproj  section6.vcxproj.filters
tests/: tests.sln
tests/operator_test/: Fraction.cpp  (+3 more)
(+1 files in other folders)
